# CRCminer

./: README.md  meme2gene.py  pyproject.toml
crcminer/: compare.py  crcminer.py  create_nodes_graph.py  motifs.py  network.py
crcminer/app/: app.py  requirements.txt
crcminer/app/data/: E_DEGREE_TABLE.txt  H_DEGREE_TABLE.txt  Putative_CRC_Cliques.csv  TF_Degrees.csv  group1_EdgeTable.txt  group1_NodesTPM.txt  group1_Putative_CRC_Cliques.txt  group1_degreeTable.txt  group2_EdgeTable.txt  group2_NodesTPM.txt  group2_Putative_CRC_Cliques.txt  group2_degreeTable.txt  nodes.csv  nodes_2.csv  sample.csv  sample_2.csv
crcminer/data/: A549.ATAC.pseudorep_peaks.ENCFF017EMG.chr22.bed  A549.RSEM.ENCFF715WBR.TPM1.genes.tsv  A549_SuperEnhancers_ENHANCER_TO_GENE.txt  ATAC.chr22.fasta  DepMap23Q2.AchillesCommonEssentialControls.IDs.txt  Homo_sapiens.meme  Stage2.ipynb
images/: Workflow.ai
